# backtester

./: .gitignore  README.md  pyproject.toml  run.py
src/backtester/: __init__.py  analytics.py  broker.py  data.py  engine.py  indicators.py  models.py  plotting.py  portfolio.py  report.py  risk.py  sizing.py  strategy.py
src/strategies/: mean_reversion.py  momentum.py  sma_cross.py
tests/: test_analytics.py  test_data.py  test_engine.py  test_indicators.py  test_risk.py
